UG, DG, PPP and bug fix for autocomplete

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -20,7 +20,7 @@ By: `T12-1`      Since: `Sep 2019`      Licence: `MIT`
 Refer to the guide <<SettingUp#, here>>.
 
 == Design
-
+// tag::architecture[]
 [[Design-Architecture]]
 === Architecture
 
@@ -69,6 +69,7 @@ The _Sequence Diagram_ below shows how the components interact with each other f
 image::ArchitectureSequenceDiagram.png[]
 
 The sections below give more details of each component.
+//end::architecture[]
 
 //tag::ui[]
 [[Design-Ui]]
@@ -86,7 +87,6 @@ further explained using a separate diagram.
 image::UiClassDiagram.png[]
 
 *API* : link:{repoURL}/src/main/java/seedu/pluswork/ui/Ui.java[`Ui.java`]
-
 
 ==== Functionality of `UserViewMain`
 
@@ -649,6 +649,40 @@ represented as enumerations.
 
 ** Cons: Implementation is harder, and we have to ensure minimal errors or bugs.
 
+// tag::autocomplete[]
+=== AutoComplete feature
+==== Proposed Implementation
+* **Alternative 1 (current choice)**: Logic handles the autocomplete logic. While Commandbox will receive the result and populate the context menu based on output from logic.
+
+** Pros: Easy to change autocomplete logic in the future if need be, such as integrating prefix suggestions, which require the dashboard's data;
+
+** Cons: Need to access the autocomplete component. Hard to pass props to logic with regards to textbox like caret position.
+
+* **Alternative 2**: Handle all autocomplete logic within command box
+
+** Pros: This would be easier to implement and maintain UI components. Can access TextField directly.
+
+** Cons: Difficult to access other logic components. Handles both UI and logic in the same component. ]
+
+Given below is an example usage scenario and how AutoComplete  behaves at each step:
+
+Step 1. The user launches the application. The command box is initialized together in the main window. Logic is initialised and passed into command box.
+
+Step 2. The user attempts to type a command `input` in Command Box.
+
+Step 3. Command Box  calls `Logic#getAutoCompleteResults()` which calls `AutoComplete#completeText(String input)`, which calls `Keywords #commandList(String input)`. This returns a filtered Linked List of possible commands.
+
+Step 4. The Linked List of commands will be passed back into Command Box who will call `populatePopup(LinkedList<String> searchResult)` to make its own ContextMenu to be displayed.
+
+Step 5. The UI now reflects a list of available commands filtered based on text.
+
+The following sequence diagram shows how the autocomplete works.
+
+
+.Operational flow of `getAutoCompleteResults()`
+image::AutoCompleteFlow.png[]
+
+// end::autocomplete[]
 === [Proposed] Undo/Redo feature
 ==== Proposed Implementation
 
