Tweaks to constraint docs

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -443,6 +443,9 @@ Format: `add de/DESCRIPTION a/AMOUNT [c/CATEGORY] [ty/TRANSACTION_TYPE] [so/MONT
 
 You can use the `add` command to create a repeater. This also creates the transactions associated with the created repeater.
 
+[NOTE]
+Duplicate repeaters, where both repeaters have exactly the same fields, are not allowed in IchiFund.
+
 The optional arguments take the following default values if left unspecified.
 
 |==============================
@@ -456,6 +459,7 @@ The optional arguments take the following default values if left unspecified.
 
 Constraints:
 
+* No duplicate repeater currently exists.
 * Repeater end must not occur before repeater start.
 * Repeater start and end can span at most 60 months (5 years).
 * At least one of month start offset or month end offset must not be ignored.
@@ -476,6 +480,7 @@ The repeater fields will only be updated where the arguments are specified.
 
 Constraints:
 
+* No duplicate repeater currently exists.
 * Repeater end must not occur before repeater start.
 * Repeater start and end can span at most 60 months (5 years).
 * At least one of month start offset or month end offset must not be ignored.
@@ -498,9 +503,9 @@ Deletes the 12th repeater in the current list. This also deletes the transaction
 
 ==== Finding repeater: `find`
 
-Format: `find KEYWORD [MORE_KEYWORDS]`
+Format: `find [KEYWORDS]`
 
-You can use the `find` command to find repeaters whose description matches all the (case-insensitive) given keyword(s).
+You can use the `find` command to find repeaters whose description matches all the (case-insensitive) given keyword(s). If no keyword is specified, then the search filter is cleared.
 
 Examples:
 
